@@ -391,8 +391,11 @@
   // caveats: https://eklitzke.org/the-caveats-of-tcp-nodelay
   "TcpNoDelay" : true,
 
-  // Number of threads that are used by the embedded HTTP server.
-  "HttpThreadsCount" : 50,
+  // Number of threads that are used by the embedded HTTP server.  In
+  // Orthanc <= 1.6.0, the default value was 50. In Orthanc >= 1.6.1,
+  // default is 10 to prevent memory grow in basic setups.
+  // https://groups.google.com/d/msg/orthanc-users/qWqxpvCPv8g/Z8huoA5FDAAJ
+  "HttpThreadsCount" : 10,
 
   // If this option is set to "false", Orthanc will run in index-only
   // mode. The DICOM files will not be stored on the drive. Note that
